// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenuesList renders correctly with venues 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <VenuesList
    isLoading={false}
    nearbyVenues={
        Array [
            Object {
              "address": Array [
                "Wagnerplein",
                "2324 Leiden",
                "Netherlands",
              ],
              "icon": Object {
                "name": "Pizza Places",
                "url": "https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png",
              },
              "id": "4dd569c0d4c05d5096b871d4",
              "name": "Pizza Picasso & Grill",
            },
            Object {
              "address": Array [
                "Keizersgracht",
                "Amsterdam",
                "Netherlands",
              ],
              "icon": Object {
                "name": "Work Places",
                "url": "https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png",
              },
              "id": "abcd",
              "name": "Adyen",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        <WithStyles(List)
          component="nav"
          subheader={
                    <WithStyles(ListSubheader)
                              component="div"
                              style={
                                        Object {
                                                  "color": "#00112c",
                                                  "fontSize": "2.4rem",
                                                }
                              }
                    >
                              Nearby venues
                    </WithStyles(ListSubheader)>
          }
>
          <WithStyles(ListItem)
                    disableGutters={true}
          >
                    <WithStyles(ListItem)
                              button={true}
                    >
                              <WithStyles(ListItemIcon)>
                                        <WithStyles(Avatar)
                                                  alt="Pizza Places"
                                                  src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
                                        />
                              </WithStyles(ListItemIcon)>
                              <WithStyles(ListItemText)
                                        inset={true}
                                        primary="Pizza Picasso & Grill"
                              />
                    </WithStyles(ListItem)>
          </WithStyles(ListItem)>
          <WithStyles(ListItem)
                    disableGutters={true}
          >
                    <WithStyles(ListItem)
                              button={true}
                    >
                              <WithStyles(ListItemIcon)>
                                        <WithStyles(Avatar)
                                                  alt="Work Places"
                                                  src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
                                        />
                              </WithStyles(ListItemIcon)>
                              <WithStyles(ListItemText)
                                        inset={true}
                                        primary="Adyen"
                              />
                    </WithStyles(ListItem)>
          </WithStyles(ListItem)>
</WithStyles(List)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(ListItem)
              disableGutters={true}
>
              <WithStyles(ListItem)
                            button={true}
              >
                            <WithStyles(ListItemIcon)>
                                          <WithStyles(Avatar)
                                                        alt="Pizza Places"
                                                        src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
                                          />
                            </WithStyles(ListItemIcon)>
                            <WithStyles(ListItemText)
                                          inset={true}
                                          primary="Pizza Picasso & Grill"
                            />
              </WithStyles(ListItem)>
</WithStyles(ListItem)>,
            <WithStyles(ListItem)
              disableGutters={true}
>
              <WithStyles(ListItem)
                            button={true}
              >
                            <WithStyles(ListItemIcon)>
                                          <WithStyles(Avatar)
                                                        alt="Work Places"
                                                        src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
                                          />
                            </WithStyles(ListItemIcon)>
                            <WithStyles(ListItemText)
                                          inset={true}
                                          primary="Adyen"
                            />
              </WithStyles(ListItem)>
</WithStyles(ListItem)>,
          ],
          "component": "nav",
          "subheader": <WithStyles(ListSubheader)
            component="div"
            style={
                        Object {
                                    "color": "#00112c",
                                    "fontSize": "2.4rem",
                                  }
            }
>
            Nearby venues
</WithStyles(ListSubheader)>,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "4dd569c0d4c05d5096b871d4",
            "nodeType": "class",
            "props": Object {
              "children": <WithStyles(ListItem)
                button={true}
>
                <WithStyles(ListItemIcon)>
                                <WithStyles(Avatar)
                                                alt="Pizza Places"
                                                src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
                                />
                </WithStyles(ListItemIcon)>
                <WithStyles(ListItemText)
                                inset={true}
                                primary="Pizza Picasso & Grill"
                />
</WithStyles(ListItem)>,
              "disableGutters": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "button": true,
                "children": Array [
                  <WithStyles(ListItemIcon)>
                    <WithStyles(Avatar)
                                        alt="Pizza Places"
                                        src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
                    />
</WithStyles(ListItemIcon)>,
                  <WithStyles(ListItemText)
                    inset={true}
                    primary="Pizza Picasso & Grill"
/>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <WithStyles(Avatar)
                      alt="Pizza Places"
                      src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
/>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "alt": "Pizza Places",
                      "src": "https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "inset": true,
                    "primary": "Pizza Picasso & Grill",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "abcd",
            "nodeType": "class",
            "props": Object {
              "children": <WithStyles(ListItem)
                button={true}
>
                <WithStyles(ListItemIcon)>
                                <WithStyles(Avatar)
                                                alt="Work Places"
                                                src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
                                />
                </WithStyles(ListItemIcon)>
                <WithStyles(ListItemText)
                                inset={true}
                                primary="Adyen"
                />
</WithStyles(ListItem)>,
              "disableGutters": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "button": true,
                "children": Array [
                  <WithStyles(ListItemIcon)>
                    <WithStyles(Avatar)
                                        alt="Work Places"
                                        src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
                    />
</WithStyles(ListItemIcon)>,
                  <WithStyles(ListItemText)
                    inset={true}
                    primary="Adyen"
/>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <WithStyles(Avatar)
                      alt="Work Places"
                      src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
/>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "alt": "Work Places",
                      "src": "https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "inset": true,
                    "primary": "Adyen",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <WithStyles(List)
            component="nav"
            subheader={
                        <WithStyles(ListSubheader)
                                    component="div"
                                    style={
                                                Object {
                                                            "color": "#00112c",
                                                            "fontSize": "2.4rem",
                                                          }
                                    }
                        >
                                    Nearby venues
                        </WithStyles(ListSubheader)>
            }
>
            <WithStyles(ListItem)
                        disableGutters={true}
            >
                        <WithStyles(ListItem)
                                    button={true}
                        >
                                    <WithStyles(ListItemIcon)>
                                                <WithStyles(Avatar)
                                                            alt="Pizza Places"
                                                            src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
                                                />
                                    </WithStyles(ListItemIcon)>
                                    <WithStyles(ListItemText)
                                                inset={true}
                                                primary="Pizza Picasso & Grill"
                                    />
                        </WithStyles(ListItem)>
            </WithStyles(ListItem)>
            <WithStyles(ListItem)
                        disableGutters={true}
            >
                        <WithStyles(ListItem)
                                    button={true}
                        >
                                    <WithStyles(ListItemIcon)>
                                                <WithStyles(Avatar)
                                                            alt="Work Places"
                                                            src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
                                                />
                                    </WithStyles(ListItemIcon)>
                                    <WithStyles(ListItemText)
                                                inset={true}
                                                primary="Adyen"
                                    />
                        </WithStyles(ListItem)>
            </WithStyles(ListItem)>
</WithStyles(List)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(ListItem)
                disableGutters={true}
>
                <WithStyles(ListItem)
                                button={true}
                >
                                <WithStyles(ListItemIcon)>
                                                <WithStyles(Avatar)
                                                                alt="Pizza Places"
                                                                src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
                                                />
                                </WithStyles(ListItemIcon)>
                                <WithStyles(ListItemText)
                                                inset={true}
                                                primary="Pizza Picasso & Grill"
                                />
                </WithStyles(ListItem)>
</WithStyles(ListItem)>,
              <WithStyles(ListItem)
                disableGutters={true}
>
                <WithStyles(ListItem)
                                button={true}
                >
                                <WithStyles(ListItemIcon)>
                                                <WithStyles(Avatar)
                                                                alt="Work Places"
                                                                src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
                                                />
                                </WithStyles(ListItemIcon)>
                                <WithStyles(ListItemText)
                                                inset={true}
                                                primary="Adyen"
                                />
                </WithStyles(ListItem)>
</WithStyles(ListItem)>,
            ],
            "component": "nav",
            "subheader": <WithStyles(ListSubheader)
              component="div"
              style={
                            Object {
                                          "color": "#00112c",
                                          "fontSize": "2.4rem",
                                        }
              }
>
              Nearby venues
</WithStyles(ListSubheader)>,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "4dd569c0d4c05d5096b871d4",
              "nodeType": "class",
              "props": Object {
                "children": <WithStyles(ListItem)
                  button={true}
>
                  <WithStyles(ListItemIcon)>
                                    <WithStyles(Avatar)
                                                      alt="Pizza Places"
                                                      src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
                                    />
                  </WithStyles(ListItemIcon)>
                  <WithStyles(ListItemText)
                                    inset={true}
                                    primary="Pizza Picasso & Grill"
                  />
</WithStyles(ListItem)>,
                "disableGutters": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "button": true,
                  "children": Array [
                    <WithStyles(ListItemIcon)>
                      <WithStyles(Avatar)
                                            alt="Pizza Places"
                                            src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
                      />
</WithStyles(ListItemIcon)>,
                    <WithStyles(ListItemText)
                      inset={true}
                      primary="Pizza Picasso & Grill"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <WithStyles(Avatar)
                        alt="Pizza Places"
                        src="https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png"
/>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "alt": "Pizza Places",
                        "src": "https://ss3.4sqi.net/img/categories_v2/food/pizza_bg_64.png",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "inset": true,
                      "primary": "Pizza Picasso & Grill",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "abcd",
              "nodeType": "class",
              "props": Object {
                "children": <WithStyles(ListItem)
                  button={true}
>
                  <WithStyles(ListItemIcon)>
                                    <WithStyles(Avatar)
                                                      alt="Work Places"
                                                      src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
                                    />
                  </WithStyles(ListItemIcon)>
                  <WithStyles(ListItemText)
                                    inset={true}
                                    primary="Adyen"
                  />
</WithStyles(ListItem)>,
                "disableGutters": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "button": true,
                  "children": Array [
                    <WithStyles(ListItemIcon)>
                      <WithStyles(Avatar)
                                            alt="Work Places"
                                            src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
                      />
</WithStyles(ListItemIcon)>,
                    <WithStyles(ListItemText)
                      inset={true}
                      primary="Adyen"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <WithStyles(Avatar)
                        alt="Work Places"
                        src="https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png"
/>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "alt": "Work Places",
                        "src": "https://ss3.4sqi.net/img/categories_v2/work/work_bg_64.png",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "inset": true,
                      "primary": "Adyen",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`VenuesList renders correctly without venues and loading 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <VenuesList
    isLoading={true}
    nearbyVenues={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          style={
                    Object {
                              "color": "#1b2b44",
                              "padding": "16px 8px",
                              "textAlign": "center",
                              "width": "100%",
                            }
          }
>
          <p>
                    Loading venues...
          </p>
          <WithStyles(CircularProgress)
                    style={
                              Object {
                                        "display": "inline-block",
                                      }
                    }
                    thickness={1}
          />
</div>,
        <WithStyles(List)
          component="nav"
          subheader={
                    <WithStyles(ListSubheader)
                              component="div"
                              style={
                                        Object {
                                                  "color": "#00112c",
                                                  "fontSize": "2.4rem",
                                                }
                              }
                    >
                              Nearby venues
                    </WithStyles(ListSubheader)>
          }
>
          
</WithStyles(List)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Loading venues...
</p>,
            <WithStyles(CircularProgress)
              style={
                            Object {
                                          "display": "inline-block",
                                        }
              }
              thickness={1}
/>,
          ],
          "style": Object {
            "color": "#1b2b44",
            "padding": "16px 8px",
            "textAlign": "center",
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Loading venues...",
            },
            "ref": null,
            "rendered": "Loading venues...",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "display": "inline-block",
              },
              "thickness": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [],
          "component": "nav",
          "subheader": <WithStyles(ListSubheader)
            component="div"
            style={
                        Object {
                                    "color": "#00112c",
                                    "fontSize": "2.4rem",
                                  }
            }
>
            Nearby venues
</WithStyles(ListSubheader)>,
        },
        "ref": null,
        "rendered": Array [],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            style={
                        Object {
                                    "color": "#1b2b44",
                                    "padding": "16px 8px",
                                    "textAlign": "center",
                                    "width": "100%",
                                  }
            }
>
            <p>
                        Loading venues...
            </p>
            <WithStyles(CircularProgress)
                        style={
                                    Object {
                                                "display": "inline-block",
                                              }
                        }
                        thickness={1}
            />
</div>,
          <WithStyles(List)
            component="nav"
            subheader={
                        <WithStyles(ListSubheader)
                                    component="div"
                                    style={
                                                Object {
                                                            "color": "#00112c",
                                                            "fontSize": "2.4rem",
                                                          }
                                    }
                        >
                                    Nearby venues
                        </WithStyles(ListSubheader)>
            }
>
            
</WithStyles(List)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Loading venues...
</p>,
              <WithStyles(CircularProgress)
                style={
                                Object {
                                                "display": "inline-block",
                                              }
                }
                thickness={1}
/>,
            ],
            "style": Object {
              "color": "#1b2b44",
              "padding": "16px 8px",
              "textAlign": "center",
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Loading venues...",
              },
              "ref": null,
              "rendered": "Loading venues...",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Object {
                  "display": "inline-block",
                },
                "thickness": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [],
            "component": "nav",
            "subheader": <WithStyles(ListSubheader)
              component="div"
              style={
                            Object {
                                          "color": "#00112c",
                                          "fontSize": "2.4rem",
                                        }
              }
>
              Nearby venues
</WithStyles(ListSubheader)>,
          },
          "ref": null,
          "rendered": Array [],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
